feat: added round end logic